--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap");
 @import "tailwindcss";
-
-@import 'swiper/css';
-@import 'swiper/css/navigation';
-@import 'swiper/css/pagination';
-
+@custom-variant dark (&:where(.dark, .dark *));
+@import "swiper/css";
+@import "swiper/css/navigation";
+@import "swiper/css/pagination";
 
 :root {
-  --font-main: 'Noto Sans', sans-serif;
+  --font-main: "Noto Sans", sans-serif;
   --color-main: #000000;
   --color-secondary: #ffffff;
   --color-third: #e12c43;
@@ -19,7 +18,6 @@
   --fs-p: 18px;
 }
 
- 
 /* Container utility */
 .container {
   @apply max-w-[1200px] mx-auto px-4;
